Saving before refactoring (saving to DB postgres)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
 
         <activity
-            android:name="com.MainActivity"
+            android:name="pos.MainActivity"
             android:exported="true">
 
             <intent-filter>
