--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -15,18 +15,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.POS_ver_01"
         tools:targetApi="31">
-
-
         <activity
-            android:name="pos.MainActivity"
-            android:exported="true">
-
+            android:name="pos.ui.login.LoginActivity"
+            android:exported="false"
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="pos.ui.settings.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name="pos.ui.main.MainActivity"
+            android:exported="true">
+            <intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
 
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
