--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,12 @@
         tools:targetApi="31">
         <activity
             android:name="pos.ui.login.LoginActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -29,11 +30,12 @@
             android:exported="false" />
         <activity
             android:name="pos.ui.main.MainActivity"
-            android:exported="true">
-            <intent-filter>
-            <category android:name="android.intent.category.LAUNCHER" />
+            android:exported="false">
 
-            </intent-filter>
+        </activity>
+        <activity
+            android:name="pos.ui.itog.ItogActivity"
+            android:exported="false">
         </activity>
     </application>
 
