--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:name="pos.ui.itog.ItogActivity"
             android:exported="false">
         </activity>
+        <activity
+            android:name="pos.ui.checks.ChecksActivity"
+            android:exported="false">
+        </activity>
     </application>
 
 </manifest>
